# mprpc-study

./: .gitignore  CMakeLists.txt  README.md
config/: test.conf
example/: user.pb.cc  user.pb.h  user.proto
example/callee/: CMakeLists.txt  friend_service.cpp  user_service.cpp
example/caller/: CMakeLists.txt  friend_client.cpp  user_client.cpp
include/: mprpc_application.h  mprpc_config.h  mprpc_consumer.h  mprpc_controller.h  mprpc_logger.h  mprpc_provider.h  rpc_consumer.h  rpc_provider.h  zookeeper_client.h
proto/: friend.proto  rpc_header.proto  user.proto
src/: CMakeLists.txt  mprpc_application.cpp  mprpc_config.cpp  mprpc_consumer.cpp  mprpc_controller.cpp  mprpc_logger.cpp  mprpc_provider.cpp  rpc_consumer.cpp  rpc_provider.cpp  zookeeper_client.cpp
test/: main.cpp  test  test.pb.cc  test.pb.h  test.proto
